# pydata-hmnl

./: README.md  README.qmd  pyproject.toml
presentations/: pydata-hmnl.qmd
